--- a/gradle.properties
+++ b/gradle.properties
@@ -5,4 +5,5 @@ org.gradle.daemon=true
 org.gradle.configureondemand=true
 org.gradle.parallel=true
 jei_version=4.16.1.302
+oc_version=1.7.5.221
 mc_version=1.12.2
