--- a/build.gradle
+++ b/build.gradle
@@ -41,6 +41,11 @@ repositories {
     }
 
     maven {
+        name = "ModMaven.com"
+        url = "https://modmaven.dev/"
+    }
+
+    maven {
         // location of a maven mirror for JEI files, as a fallback
         name = "ModMaven"
         url = "https://modmaven.k-4u.nl"
@@ -72,6 +77,11 @@ dependencies {
     deobfProvided "mezz.jei:jei_${mc_version}:${jei_version}:api"
     // at runtime, use the full JEI jar
     runtime "mezz.jei:jei_${mc_version}:${jei_version}"
+
+    // compile against the OC API but do not include it at runtime
+    provided "li.cil.oc:OpenComputers:MC1.12.2-1.7.5.221:api"
+    // at runtime, use the full OC jar MC1.12.2-1.7.5.221
+    runtime "li.cil.oc:OpenComputers:MC1.12.2-1.7.5.221"
 
     // for more info...
     // http://www.gradle.org/docs/current/userguide/artifact_dependencies_tutorial.html
