--- a/build.gradle
+++ b/build.gradle
@@ -68,6 +68,8 @@ dependencies {
     // the 'provided' configuration is for optional dependencies that exist at compile-time but might not at runtime.
     //provided 'com.mod-buildcraft:buildcraft:6.0.8:dev'
 
+    //Compile against the OpenComputers api
+    compile "li.cil.oc:OpenComputers:MC1.12.2-1.7.5+:api"
     // the deobf configurations:  'deobfCompile' and 'deobfProvided' are the same as the normal compile and provided,
     // except that these dependencies get remapped to your current MCP mappings
     //deobfCompile 'com.mod-buildcraft:buildcraft:6.0.8:dev'
@@ -78,10 +80,6 @@ dependencies {
     // at runtime, use the full JEI jar
     runtime "mezz.jei:jei_${mc_version}:${jei_version}"
 
-    // compile against the OC API but do not include it at runtime
-    provided "li.cil.oc:OpenComputers:MC1.12.2-1.7.5.221:api"
-    // at runtime, use the full OC jar MC1.12.2-1.7.5.221
-    runtime "li.cil.oc:OpenComputers:MC1.12.2-1.7.5.221"
 
     // for more info...
     // http://www.gradle.org/docs/current/userguide/artifact_dependencies_tutorial.html
