--- a/build.gradle
+++ b/build.gradle
@@ -69,7 +69,7 @@ dependencies {
     //provided 'com.mod-buildcraft:buildcraft:6.0.8:dev'
 
     //Compile against the OpenComputers api
-    compile "li.cil.oc:OpenComputers:MC1.12.2-1.7.5+:api"
+    compile "li.cil.oc:OpenComputers:MC1.12.2-1.7.+:api"
     // the deobf configurations:  'deobfCompile' and 'deobfProvided' are the same as the normal compile and provided,
     // except that these dependencies get remapped to your current MCP mappings
     //deobfCompile 'com.mod-buildcraft:buildcraft:6.0.8:dev'
